# Visual-AId

./: .gitignore  pyproject.toml
backend/: main.py
backend/api/: chat.py  image.py  test.py  voice.py
backend/models/: ollama_client.py
backend/utils/: context_manager.py
webapp/: index.html  script.js  styles.css
